# T

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
brain/: main.py  requirements.txt
brain/agents/: executor.py  tools.py  web_attack.py  wordlist.py  wp_attack.py
brain/config/: hardware_devices.yaml
brain/core/: engine.py  llm.py  logger.py  ws_server.py
brain/hardware/: arduino_sketch.ino  command_router.py  gpio_handler.py  mqtt_handler.py  registry.py  safety.py  serial_handler.py
brain/integrations/: system_control.py  web.py
brain/local_access/: credential.py  escalation.py  helper.py  memory_inspector.py  orchestrator.py  safety.py  session.py
brain/memory/: extractor.py  injector.py  store.py
brain/proactive/: alerts.py  engine.py  monitor.py  suggestions.py
brain/voice/: pipeline.py  stt.py  tts.py
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: memory.rs  mod.rs  network.rs  security.rs  system.rs
src-tauri/src/db/: memory.rs  mod.rs
src/components/chat/: ChatPanel.tsx
src/components/hardware/: HardwarePanel.tsx
src/components/hud/: JarvisCoreVisualizer.tsx  SideNav.tsx  TopBar.tsx
src/components/network/: NetworkPanel.tsx
src/components/security/: SecurityPanel.tsx
src/hooks/: useBridge.ts  useChat.ts  useMemory.ts  useSystemStats.ts  useVoice.ts
src/lib/: ai.ts  bridge.ts  tauri.ts
src/store/: index.ts
(+2 files in other folders)
